Fixed GridItem layout bug

--- a/src/components/Grid.module.css
+++ b/src/components/Grid.module.css
@@ -11,7 +11,6 @@
   height: 0;
   list-style: none;
   margin: 0;
-  padding-bottom: 10%;
-  padding: 0;
+  padding: 0 0 10% 0;
   width: 10%;
 }
